components added. routing edited.

--- a/src/css/styles.less
+++ b/src/css/styles.less
@@ -7,6 +7,21 @@
   text-align: center;
 }
 
+.image {
+  width:100%; /*width of your image*/
+  height:100%; /*height of your image*/
+  content:url('./picture.jpg');
+  margin:1.0%;
+  z-index:999;
+}
+
+
+.image:hover {
+  width:70%; /*width of your image*/
+  height:70%; /*height of your image*/
+  content:url('./picture1.jpg');
+ }
+
 .text_block:hover {
   background-color: grey;
 }
