--- a/src/css/styles.less
+++ b/src/css/styles.less
@@ -10,7 +10,7 @@
 .image {
   width:100%; /*width of your image*/
   height:100%; /*height of your image*/
-  content:url('./picture.jpg');
+  content:url('../pictures/01.jpg');
   margin:1.0%;
   z-index:999;
 }
@@ -19,7 +19,7 @@
 .image:hover {
   width:70%; /*width of your image*/
   height:70%; /*height of your image*/
-  content:url('./picture1.jpg');
+  content:url('../pictures/02.jpg');
  }
 
 .text_block:hover {
