--- a/src/css/styles.less
+++ b/src/css/styles.less
@@ -7,10 +7,29 @@
   text-align: center;
 }
 
+.movie {
+  text-align: center;
+  color: black;
+  background: white;
+  margin: 1%;
+  height:100%;
+  width: 100%;
+  border: black solid 3px;
+  border-radius: 25px;
+  z-index:1;
+}
+
+.movie:hover {
+  text-align: center;
+  color: black;
+  background: darkgray;
+  border-radius: 25px;
+}
+
 .image {
   width:100%; /*width of your image*/
   height:100%; /*height of your image*/
-  content:url('../pictures/01.jpg');
+  content: url("../pictures/avengers.jpg");
   margin:1.0%;
   z-index:999;
 }
@@ -19,7 +38,7 @@
 .image:hover {
   width:70%; /*width of your image*/
   height:70%; /*height of your image*/
-  content:url('../pictures/02.jpg');
+  content:url('../pictures/ono2.jpg');
  }
 
 .text_block:hover {
